--- a/VisualStudioProject/MyLib_C/MyLib_C.vcxproj.filters
+++ b/VisualStudioProject/MyLib_C/MyLib_C.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="main.c">
       <Filter>資源檔</Filter>
     </ClCompile>
   </ItemGroup>
